Refactor(PlanProgress): 일급 컬렉션 기반 리팩토링 수행